# Intrusion-Detection-System-Rust-

./: Cargo.toml  README.md
src/: detector.rs  logger.rs  main.rs  packet_parser.rs
