[package]
name = "ids"
version = "0.1.0"
edition = "2021"

[dependencies]
etherparse = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
pcap = "1.1"
chrono = "0.4.40"
lazy_static = "1.4"
ctrlc = "3.2.0"
tokio = { version = "1", features = ["full"]}
futures = "0.3"